2004-06-26  Alan Modra  <amodra@bigpond.net.au>

	* ld-bootstrap/bootstrap.exp: Handle timestamps in more pe targets.

2004-06-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elfvers/vers.exp: Use PIC for shared libraries by default.

2004-06-21  Alexandre Oliva  <aoliva@redhat.com>

	* ld-frv/fdpic-pie-1.d: Adjust for pie-specific link script.
	* ld-frv/fdpic-pie-2.d: Likewise.
	* ld-frv/fdpic-pie-6.d: Likewise.
	* ld-frv/fdpic-pie-7.d: Likewise.
	* ld-frv/fdpic-pie-8.d: Likewise.
	* ld-frv/fdpic-shared-1.d: Likewise.
	* ld-frv/fdpic-shared-2.d: Likewise.
	* ld-frv/fdpic-shared-3.d: Likewise.
	* ld-frv/fdpic-shared-4.d: Likewise.
	* ld-frv/fdpic-shared-5.d: Likewise.
	* ld-frv/fdpic-shared-6.d: Likewise.
	* ld-frv/fdpic-shared-7.d: Likewise.
	* ld-frv/fdpic-shared-8.d: Likewise.
	* ld-frv/fdpic-shared-local-2.d: Likewise.
	* ld-frv/fdpic-shared-local-8.d: Likewise.

2004-06-21  Nick Clifton  <nickc@redhat.com>

	* ld-elf/frame.exp: Handle ports which do not support the --shared
	linker switch.

2004-06-18 Jan Beulich <jbeulich@novell.com>

	* ld-elfvsb/main.c: Ensure visibility_def and visibility_func are
	actually referenced (gcc 3.4 eliminates comparisons of addresses
	of global symbols with NULL).
	* ld-selective/selective.exp: Suppress -fvtable-gc tests for gcc
	3.4.0 and above, as this option and its functionality is no longer
	supported, making these tests fail).

2004-05-18  Nick Clifton  <nickc@redhat.com>

	* ld-elf/frame.s: Replace @ with % so that the file can be
	compiled by an ARM targeted GAS.
	* ld-elf/table.s: Likewise.
	* ld-elf/tbss.s: Likewise.  Also replace .align <foo> with
	.p2align (log2 <foo>) to cope with the fact that the ARM .align
	directive takes a power-of-two argument.

2004-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/frame.exp: New file. Test read-only .eh_frame and
	.gcc_except_table sections.
	* ld-elf/frame.s: Likewise.
	* ld-elf/table.s: Likewise.
	* ld-elf/tbss.s: Likewise.

2004-05-12  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
