@@ -1,3 +1,7 @@
+2004-06-29  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-elf/frame.exp: Don't run on mcore.
+
 2004-06-26  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-bootstrap/bootstrap.exp: Handle timestamps in more pe targets.
